app/assets/stylesheets/style.css
/* CSS By Karin Dalziel and Kaci Nash */

/* ==================================
Sitewide/basic HTML
=====================================*/

#wrapper {
	padding-top: .3em;
}

.container {
	background-color: #fff;
	/*box-shadow: 0 9px 0px 0px #fff, 
  	0 -9px 0px 0px #fff, 
  	0px 0 15px -4px #888, 
  	-0px 0 15px -4px #888;*/
  	
	/* This box shadow is an attempt to have a shadow and work with multiple containers http://stackoverflow.com/questions/11997032/how-to-get-box-shadow-on-left-right-sides-only */
}

/* Links */

.main_content a {
	border-bottom: solid 1px #5A8597;
}

.main_content a:hover {
	border-bottom: solid 1px #a51400;
}

a.selected {
	background-color: #6b96a5;
	color: #fff;
}

/* Tables */

table {
	margin-left: auto;
	margin-right: auto;
	width: 100%;
}

table td {
	border: 1;
	padding: 5px 5px;
	padding-right: 25px;
}

/* Other HTML */

.hr {
	border: none;
	border-top: solid 1px #aaa;
	display: block;
	height: 1px;
	margin: 10px 0;
}

.hidden {
	display: none;
}

.unhidden {
	display: block;
}

/* Search Results Facet Styling */

.no-facet-results {
	display: none !important;
}

/* Added padding to the bottom to make anchors work better, nut not on small screens */

@media (min-width: 768px) {
	body {
		padding: 0 0 400px 0;
	}
}

/* Footnotes */

.foot {
	font-size: .8em;
	vertical-align: super;
	line-height: 1em;
}

.foot a {
	text-decoration: none;
	border: none;
}

/* Tooltips and switch boxes */

#tooltip {
	position: absolute;
	z-index: 9999;
	color: #000;
	font-size: .9em;
	background-color: #fff;
	border: 1px solid #aaa;
	text-decoration: none;
	font-weight: normal;
	font-style: normal;
	padding: 10px;
	text-align: left;
	-moz-box-shadow: 5px 5px 5px #aaa;
	-webkit-box-shadow: 5px 5px 5px #aaa;
	box-shadow: 5px 5px 5px #aaa;
	line-height: 1.4;
	max-width: 400px;
}

#tooltip.inlinenote {
	max-width: 400px !important;
}

a #tooltip {
	text-decoration: none;
}

div#regularized_text_switch_box {
	font-style: italic;
	color: #b33f2d;
	border: 1px #aaa solid;
	padding: 10px;
	margin: 5px -11px 5px -11px;
	background-color: #ececec;
	display: block;
	text-decoration: none;
}

div#regularized_text_switch_box a {
	text-decoration: none;
}

div#switch_box {
	font-style: italic;
	border: 1px #aaa solid;
	padding: 10px;
	margin: 0 0 10px 0;
	background-color: #ececec;
	display: block;
	text-decoration: none;
}


/* Letter Pagination */

.letter_pagination {
	margin: 0;
	padding: 0;
	list-style: none;
	vertical-align: top;
	line-height: 1em;
}

.letter_pagination li {
	display: inline-block;
}

.letter_pagination li a {
	display: inline-block;
	vertical-align: top;
	height: 2.5em;
	padding: .2em .2em .2em .2em;
	width: 2.05em;
	margin-bottom: .2em;
	text-align: center;
	border: 1px solid #ddd;
	display: inline-block;
	border-radius: 2px;
}

.letter_pagination li a:hover {
	background-color: #6b96a5;
	color: #fff;
}

.letter_pagination li a span {
	display: block;
	font-size: .7em;
}

.main_alpha_menu  .letter_pagination {
	text-align: center;
}

.browse_alpha_menu .letter_pagination li a {
	width: 3.2em;
	font-size: 1.1em;
}

.browse_alpha_menu .letter_pagination {
	line-height: 1.2em;
}


/* ==================================
TEI styles
=====================================*/

.dateline, .closer, .editorial {
	
}

.ab {
	margin: 25px 0;
}

.bibliography {
	line-height: 1.2em;
}

.bibliography p {
	clear: both;
	padding: 0;
	margin: 5px;
}

.bibliography p.metadatakeywords strong {
	padding: 3px 0px;
	margin: 2px 0;
	float: left;
}

.simple-list {
	padding: 0;
}

.persName {
	
}

.subjectLink {
	border: 0px solid #b2b0b7;
	padding: 2px;
	margin: 2px;
	background-color: #f2f2f2;
}

.singlespace {
	
}

a.sic, a.orig {
	text-decoration: none !important;
	border-bottom: 1px dotted #939393;
}

.commentary .bibl {
	font-style: italic;
}

.source_date, .source_note {
	margin-left: .1em;
	font-size: .8em;
	color: #888;
}

.source_date {
	
}

.source_note a {
	border: none;
}

.p {
	display: block;
}

.syllabus {
	font-size: 75%;
}

del {
	color: #49502F;
	color: #aaa;
}

.gap {
	color: #60693e;
	color: #aaa;
}

.unclear {
	color: #49502F;
	color: #aaa;
}

.gap.sampling {
	display: none;
}




/* ==================================
Header, Navbar, Footer 
================================== */

/* Header */

.oscys_mast {
	text-align: center;
	overflow: auto;
}

.oscys_logo {
}

.oscys_logo img {
	height: 200px;
	width: 200px;
}

.oscys_title {
	
}

.oscys_title h1 {
	text-transform: uppercase;
	font-size: 3em;
	margin-top: .2em;
}

.oscys_title h2 {
	text-transform: uppercase;
	font-family: "Dosis";
	font-weight: 200;
	font-size: 1.15em;
	margin-left: .3em;
	letter-spacing: .29em;
	margin-top: -.4em;
	padding-bottom: .9em;
}

.oscys_title h1 a,
.oscys_title h2 a {
	text-decoration: none;
	color: #424242;
}

.navbar {
	margin-top: .5em;
}

@media (min-width: 700px) {

.oscys_mast {
	

}

}

@media (min-width: 992px

) {

.oscys_mast {
	text-align: left;
	width: 80%;
	display: block;
	margin: auto;
}

.oscys_logo {
	float: left;
	margin-right: 15px;
}

.oscys_title {
	margin-left: 215px;
}

.oscys_title h1 {
	font-size: 3.85em;
	margin-top: .8em;
}

.oscys_title h2 {
	font-size: .91em;
	margin-top: -.9em;
}

}

@media (min-width: 1200px) {

.oscys_mast {
	width: 77%;
}

.oscys_logo {
	float: left;
	margin-right: 15px;
	
}

.oscys_logo img {
	height: 200px;
	width: 200px;
}

.oscys_title h1 {
	font-size: 4.7em;
	margin-top: .4em;
}

.oscys_title h2 {
	font-size: 1.1em;
	padding-left: .3em;
	display: block;
	margin-top: -.9em;
}

}

/* Navbar */

.navbar {

	font-family: "Oranienbaum", Georgia, "Times New Roman", Times, serif;
	font-size: 1.2em;
}

/* Footer */

.footer {
	background-color: #484949;
	padding: 1.5em 15px;
	margin: 2em -15px 0 -15px;
	text-align: right;
	color: #fff;
}

.footer a {
	color: #fff;
	text-decoration: underline;
}

.footerinfo {
	font-size: .7em;
	font-weight: normal;
	color: #fff;
}

.footerinfo a {
	color: #fff;
}

.footerinfo a:hover {
	color: #fff;
	text-decoration: none;
}

/* ==================================
Specific Pages 
================================== */



/* Documents */

/* Metadata box */

.meta_label {
	font-weight: bold;
}

.meta_data ul {
	margin: 0 0 .6em 0;
	padding: 0;
	list-style: none;
}

.metadata .meta_data ul li {
	display: inline-block;
	margin: .2em .2em 0 0;
}

.metadata .meta_data ul li a,
.metadata .meta_data ul li .a {
	display: inline-block;
	

/*margin-top: .5em;*/
	border: 1px solid #ddd;
	display: inline-block;
	border-radius: 4px;
	padding: .1em .3em;
	background-color: #fff;
}


/* Page images and figures */

.pageimage {
	float: right;
	clear: right;
	margin: -16px 0px 10px 10px;
	text-align: left;
	border: 5px solid #ebebeb;
}

.hr {
	border: 3px solid #ebebeb;
}

/* Cases */

.case {
	overflow: auto;
}

/* Cases and People Jump Menus */

.cases select,
.people select {
	width: 100%
}

.jump_pagination {
	border: solid #aaa 1px;
	display: block;
	padding: .2em;
	margin: .2em 0;
}

.jump_pagination form {
	display: inline-block;
	margin: 0 .5em;
}

/* Jump Menu */

.cases .jump_menu {
	margin-top: .5em;
}

.jump_menu a {
	margin-top: .5em;
	border: 1px solid #ddd;
	display: inline-block;
	border-radius: 4px;
	padding: .1em .3em;
	background-color: #fff;
}

.jump_menu h4 {
	display: inline;
}



/* Stories */

figure {
	background-color: #f5f5f5;
	text-align: center;
	padding: 8px;
}

figure img {
	max-width: 100%;
}

.figure_right {
	float: right;
	margin: 0 0 15px 15px;
}

.figure_left {
	float: left;
	margin: 0 15px 15px 0;
}

figcaption {
	margin: auto;
	font-size: .8em;
	margin-top: .5em;
}

.figure_small figcaption {
	max-width: 200px;
	
}

.figure_medium figcaption {
	max-width: 400px;
}

@media (min-width: 992px) { 
	.figure_center figcaption {
	width: 75%;
}
}

.figure_center {
	margin: .5em 0em;
}

.pullquote {
	font-size: 1.4em;
	font-family: "Oranienbaum", Georgia, "Times New Roman", Times, serif;
	line-height: 1.3em;
	border: 5px solid #eaeaea;
	border-right: none;
	border-left:none;
	padding: .5em 0;
	margin: .6em 1em;
}

/* family tree for stories */

ul.tree, ul.tree ul {
	list-style-type: none;
	background: url(vline.jpg) repeat-y;
	margin: 0;
	padding: 0;
}

ul.tree ul {
	margin-left: 30px;
}

ul.tree a {
	color: #396a78;
}

ul.tree a:hover {
	color: #ac0000;
}

ul.tree ul ul {
	margin-left: 50px;
}

ul.tree ul ul ul {
	margin-left: 70px;
}

ul.tree li {
	margin: 0;
	padding: 0 12px;
	line-height: 25px;
	background: url(node.jpg) no-repeat;
	color: #000;
	font-weight: normal;
}

ul.tree li:last-child {
	background: #fff url(lastnode.jpg) no-repeat;
}

a.gen, a.gen:visited, a.gen:active {
	color: #000;
}

.gen {
	color: #000;
}

a.cas, a.cas:visited, a.cas:active {
	color: #66713e;
}

.cas {
	color: #66713e;
}



/* People */


.visualize_link {
	padding: 8em 0 0em 0;
	display: block;
	background: url(visualization_illustration.png) no-repeat center center;
	background-size: 80%;
	border: 1px solid #ddd;
	border-radius: 4px;
}

.visualize_link .btn-default {
	background-color: RGBA(255,255,255,.7);
	color: #000;
	border: 0;
}

.visualize_link .btn-default:hover {
	border: none;
	color: #911002;
}

/* About */

/* Fake code boxes for _data.html.erb */

.code_block {
	background: #CFCFCF;
	font-family: monospace;
}



/* =================================
Home 
===============================*/


/* Rules for all callouts */

.home_callout {
	padding: 1em;
	color: #000;
	margin: 0px 0px 0px -15px;
	font-family: "Oranienbaum";
	text-align: center;
}

.home_callout p {
	margin-top: 1em;
	font-weight: bold;
	text-shadow: 1px 1px 6px #fff;
}

/* Top Callout */

.home_description {
	background: #eee0c4 url(./bg_paper_lighter.jpg) repeat fixed right center;
	border: solid 1px #aaa;
	border-right: none;
	border-left: none;
}

.home_description .container {
	background: url(./map_big_png8.png) no-repeat right center;
	height: 100%;
	background-size: 100% auto;
}

.home_description .home_callout {
	background-color: RGBA(255,255,255,.5);
	margin-right: -15px;
}

/* Bottom Callout */

.home_visualizations {
	background-color: RGBA(0,0,0,.1);
	border: solid 1px #aaa;
	border-right: none;
	border-left: none;
}

.home_visualizations .container {
	background: url(./network_rollover_2.png) 0 bottom;
}

.home_visualizations:hover .container {
	background-color: transparent;
	background: url(./network_rollover_1.png) 0 bottom;
}

.home_visualizations  .home_callout p {
	background-color: RGBA(255,255,255,.8);
	font-size: 1.1em;
	line-height: 1.3em;
	padding: .5em;
	margin: 0 -15px 0 0;
}

/* Other Page Content */

.home_sections .home_info p {
	font-size: .9em;
}

a .home_section {
	color: #000;
}

@media (min-width: 992px) {

/* Rules for all callouts */

.home_callout {
	line-height: 2em;
}

/* Top Callout */

.home_description {
	height: 440px;
}

.home_description .container {
	background-size: auto 100%;
}

.home_description .home_callout {
	float: left;
	width: 45%;
	font-size: 1.2em;
	background-color: transparent;
}

/* Bottom Callout */

.home_visualizations .container {
	height: 200px;
}

.home_visualizations  .home_callout {
	float: right;
	width: 55%;
}

/* Other Page Content */

.home_section {
	width: 50%;
	float: left;
	margin-bottom: 1em;
}

.home_sections .home_info {
	background-color: RGBA(255,255,255,.8);
	padding: .01em .6em .6em .6em;
	margin: .5em;
}

}

 @media (min-width: 1200px) {
	.home_description .home_callout {
	float: left;
	width: 45%;
	font-size: 1.4em;
	background-color: transparent;
}
	}

